Fix horizontal scroll

--- a/src/components/code-editor/style.css
+++ b/src/components/code-editor/style.css
@@ -29,7 +29,8 @@
 }
 
 .page-content-wrapper {
-    min-width: 100vw;
+    /*min-width: 100vw;*/
+    width: 100%;
     overflow-y: scroll;
 }
 
